Regrade/fails.txt

Bad Student    |    10.0
NO ERRORS

Comp_Error_No_Head    |    0
Traceback (most recent call last):
  File "Test_Sample.py", line 7, in <module>
    from Test import greet, bye
  File "/Users/saad/Documents/TA/Spring 2020/Scripts/Test.py", line 5
    print "Hello, " + name + "!" )
                  ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Hello, " + name + "!" ))?


Compile Error    |    0
Traceback (most recent call last):
  File "Test_Sample.py", line 7, in <module>
    from Test import greet, bye
  File "/Users/saad/Documents/TA/Spring 2020/Scripts/Test.py", line 17
    print "Hello, " + name + "!" )
                  ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Hello, " + name + "!" ))?


Empty    |    0
Traceback (most recent call last):
  File "Test_Sample.py", line 7, in <module>
    from Test import greet, bye
ImportError: cannot import name 'greet' from 'Test' (/Users/saad/Documents/TA/Spring 2020/Scripts/Test.py)


Half Error    |    0
Traceback (most recent call last):
  File "Test_Sample.py", line 7, in <module>
    from Test import greet, bye
  File "/Users/saad/Documents/TA/Spring 2020/Scripts/Test.py", line 17
    print "Hello, " + name + "!" )
                  ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Hello, " + name + "!" ))?


Headless Error    |    95.0
NO ERRORS

No_Comments    |    65.0
NO ERRORS

No_Header    |    95.0
NO ERRORS
